fixed hover issue for alexion logo and updated it's z-index

--- a/frontend/src/Components/CompaniesComponent/styles.css
+++ b/frontend/src/Components/CompaniesComponent/styles.css
@@ -56,6 +56,7 @@
   justify-content: center;
   align-items: flex-start;
   padding-top: 4.8rem;
+  z-index: 1;
 }
 
 .img--wrapper.img6,
